# MIDI-Patchbay

./: .gitignore  README.md
firmware/: MIDI-Patchbay-Simple.ino  MIDI-Patchbay.h  README.md
firmware/MIDI-Patchbay/: Config.cpp  Config.hpp  Knob.cpp  Knob.hpp  LCD.cpp  LCD.hpp  LED.cpp  LED.hpp  MIDI-Patchbay.ino  Menu.cpp  Menu.hpp  MenuItem.cpp  MenuItem.hpp  Menus.cpp  Menus.hpp  Patch.cpp  Patch.hpp
firmware/MIDI-Patchbay-Simple/: MIDI-Patchbay.h
firmware/tests/: README.md  lcd.ino
firmware/tests/encoders/: encoders.ino
firmware/tests/lcd/: lcd.ino
firmware/tests/panic/: MIDI-Patchbay.h  panic.ino
hardware/: README.md
hardware/MIDI-Patchbay-Display/: MIDI-Patchbay-Display.brd  MIDI-Patchbay-Display.sch  README.md
hardware/MIDI-Patchbay-Shield/: MIDI-Patchbay-Shield.brd  MIDI-Patchbay-Shield.sch  README.md
hardware/MIDI-Patchbay-Simple/: MIDI-Patchbay-Simple.brd  MIDI-Patchbay-Simple.sch  README.md
menus/: CMakeLists.txt  README
menus/include/: Menu.hpp  MenuActionItem.hpp  MenuConfigItem.hpp  MenuItem.hpp  Oscillator.hpp  Patch.hpp  config.h  globals.h  globals.hpp  patchbay.h  types.h  utils.h
menus/src/: CMakeLists.txt  Globals.cpp  Menu.cpp  MenuActionItem.cpp  MenuConfigItem.cpp  MenuItem.cpp  Oscillator.cpp  Patch.cpp  ctest.c  globals.c  patchbay.c  program.cpp  utils.c
